# nlp-with-llms-2025-hw2

./: README.md  ai_counter.ipynb  anli.ipynb  anli_baseline.ipynb  anli_llm copy.ipynb  anli_llm.ipynb  anli_llm_baseline.ipynb  baseline_preds.pkl  dspy-intro.ipynb  grok_key.ini  hello.py  hw2.md  imppres.ipynb  imppres_baseline.ipynb  imppres_llm.ipynb  imppres_llm_baseline.ipynb  person-extraction.ipynb  pyproject.toml  sentence-transformers.ipynb  unified_presupposition_dataset.csv
