[project]
name = "hw2"
version = "0.1.0"
description = "NLP with LLMs - BGU CS Dept - Spring 2025 - Michael Elhadad"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "dspy>=2.6.27",
    "evaluate>=0.4.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "sentence-transformers>=4.1.0",
    "transformers>=4.52.4",
]
